# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  vcpkg.json
assets/shaders/: fragment-texture.glsl  vertex-texture.glsl
configuration/: assets.hpp.in
src/: main.cpp
src/debug/: opengl_debug.cpp  opengl_debug.hpp
src/shader/: shader.cpp  shader.hpp
src/util/: file_operations.cpp  file_operations.hpp
